--- a/templates/layouts/main.html
+++ b/templates/layouts/main.html
@@ -48,22 +48,22 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/">Project name</a>
+          <a class="navbar-brand" href="/">PYTHON(flask)</a>
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li {% if request.endpoint == 'home' %} class="active" {% endif %}><a href="{{ url_for('home') }}">Home</a></li>
             <li {% if request.endpoint == 'about' %} class="active" {% endif %}><a href="{{ url_for('about') }}">About</a></li>
             <li class="dropdown">
-              <a class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
+              <a class="dropdown-toggle" data-toggle="dropdown">COURSES <b class="caret"></b></a>
               <ul class="dropdown-menu">
-                <li><a>Action</a></li>
-                <li><a>Another action</a></li>
-                <li><a>Something else here</a></li>
+                <li><a>Python</a></li>
+                <li><a>Flask</a></li>
+                <li><a>Jinja</a></li>
                 <li class="divider"></li>
-                <li class="dropdown-header">Nav header</li>
-                <li><a>Separated link</a></li>
-                <li><a>One more separated link</a></li>
+                <li class="dropdown-header">Flask</li>
+                <li><a>tutorials</a></li>
+                <li><a>coding practice</a></li>
               </ul>
             </li>
           </ul>
@@ -97,7 +97,7 @@
 
   <div id="footer">
     <div class="container">
-      <p>Your Company &copy; All Rights Reserved.</p>
+      <p>Minor project &copy; 12BCE126.</p>
       {% block footer %}{% endblock %}
     </div>
   </div>
