--- a/templates/pages/placeholder.home.html
+++ b/templates/pages/placeholder.home.html
@@ -1,10 +1,17 @@
 {% extends 'layouts/main.html' %}
-{% block title %}Home{% endblock %}
+{% block title %}Python{% endblock %}
 {% block content %}
 
 <div class="page-header">
-  <h1>Sticky footer with fixed navbar</h1>
+  <h1>Interactive Course Website</h1>
 </div>
-<p class="lead">Pin a fixed-height footer to the bottom of the viewport in desktop browsers with this custom HTML and CSS. A fixed navbar has been added within <code>#wrap</code> with <code>padding-top: 60px;</code> on the <code>.container</code>.</p>
+<div class="jumbotron">
+	<div class="container">
+  <h1>Start Learning ..</h1>
+  <p>Website created to help student learn this course on Python (flask).</p>
+  <p><a class="btn btn-primary btn-lg" href="#" role="button">START NOW </a></p>
+  </div>
+</div>
+ 
 
 {% endblock %}
