--- a/templates/pages/placeholder.home.html
+++ b/templates/pages/placeholder.home.html
@@ -9,7 +9,7 @@
 	<div class="container">
   <h1>Start Learning ..</h1>
   <p>Website created to help student learn this course on Python (flask).</p>
-  <p><a class="btn btn-primary btn-lg" href="#" role="button">START NOW </a></p>
+  <p><a class="btn btn-primary btn-lg" href="{{ url_for('python') }}" role="button">START NOW </a></p>
   </div>
 </div>
  
