--- a/templates/layouts/main.html
+++ b/templates/layouts/main.html
@@ -48,17 +48,17 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/">PYTHON(flask)</a>
+          <a class="navbar-brand" href="/">Python Framework-Flask</a>
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li {% if request.endpoint == 'home' %} class="active" {% endif %}><a href="{{ url_for('home') }}">Home</a></li>
             <li {% if request.endpoint == 'about' %} class="active" {% endif %}><a href="{{ url_for('about') }}">About</a></li>
             <li class="dropdown">
-              <a class="dropdown-toggle" data-toggle="dropdown">COURSES <b class="caret"></b></a>
+              <a  class="dropdown-toggle" data-toggle="dropdown">Courses <b class="caret"></b></a>
               <ul class="dropdown-menu">
-                <li><a>Python</a></li>
-                <li><a>Flask</a></li>
+                <li><a href="{{ url_for('python') }}">Python</a></li>
+                <li><a href="{{ url_for('flask') }}">Flask</a></li>
                 <li><a>Jinja</a></li>
                 <li class="divider"></li>
                 <li class="dropdown-header">Flask</li>
